# dex-contracts-api

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  cabal.project  docker-compose-kupo.yml  docker-compose.yml  geniusyield-dex-api.cabal  start.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml  haskell.yml  release.yml
data/compiled-scripts/: partial-order-config.uplc
geniusyield-dex-api/: CHANGELOG.md  README.md  geniusyield-dex-api.cabal
geniusyield-dex-api/src/GeniusYield/: Scripts.hs
geniusyield-dex-api/src/GeniusYield/Api/Dex/: Constants.hs  PartialOrder.hs  PartialOrderConfig.hs  Types.hs
geniusyield-dex-api/src/GeniusYield/Scripts/: Common.hs  Dex.hs
geniusyield-dex-api/src/GeniusYield/Scripts/Dex/: Data.hs  Nft.hs  PartialOrder.hs  PartialOrderConfig.hs  PartialOrderNft.hs  Version.hs
geniusyield-dex-api/src/GeniusYield/Scripts/Dex/PartialOrderConfig/: Internal.hs
geniusyield-onchain/: LICENSE  README.md  cabal.project  flake.nix  geniusyield-onchain.cabal
geniusyield-onchain/app/: Main.hs
geniusyield-onchain/fixtures/: nftpolicy-aggressive.txt  nftpolicy-original.txt  partialorder-optimized.txt  partialorder-original.txt  partialorderconfig-aggressive.txt  partialorderconfig-original.txt  partialordernftpolicy-aggressive.txt  partialordernftpolicy-original.txt  partialordernftpolicyV1_1-optimized.txt  partialordernftpolicyV1_1-original.txt
geniusyield-onchain/geniusyield-common/: geniusyield-common.cabal
geniusyield-onchain/geniusyield-common/data/compiled-scripts/: DEX.NFT  DEX.PartialOrder  DEX.PartialOrderConfig  DEX.PartialOrderConfigTracing  DEX.PartialOrderNFT  DEX.PartialOrderNFTTracing  DEX.PartialOrderNFTV1_1  DEX.PartialOrderNFTV1_1Tracing  DEX.PartialOrderTracing
geniusyield-onchain/geniusyield-common/src/GeniusYield/OnChain/Common/: Scripts.hs
geniusyield-onchain/geniusyield-common/src/GeniusYield/OnChain/Common/Scripts/DEX/: Data.hs
geniusyield-onchain/src/GeniusYield/: Plutonomy.hs
geniusyield-onchain/src/GeniusYield/OnChain/: Utils.hs
geniusyield-onchain/src/GeniusYield/OnChain/DEX/: NFT.hs  PartialOrder.hs  PartialOrderConfig.hs  PartialOrderNFT.hs  PartialOrderNFTV1_1.hs  README.md  Utils.hs
geniusyield-onchain/src/GeniusYield/OnChain/DEX/NFT/: Compiled.hs
geniusyield-onchain/src/GeniusYield/OnChain/DEX/PartialOrder/: Compiled.hs  Types.hs
geniusyield-onchain/src/GeniusYield/OnChain/DEX/PartialOrderConfig/: Compiled.hs
geniusyield-onchain/src/GeniusYield/OnChain/DEX/PartialOrderNFT/: Compiled.hs
geniusyield-onchain/src/GeniusYield/OnChain/DEX/PartialOrderNFTV1_1/: Compiled.hs
geniusyield-onchain/src/GeniusYield/OnChain/Plutarch/: Api.hs  Crypto.hs  Run.hs  Time.hs  Tx.hs  Types.hs  Utils.hs  Value.hs
geniusyield-onchain/tests/: geniusyield-onchain-tests.hs
geniusyield-orderbot/: README.md  geniusyield-orderbot.cabal
geniusyield-orderbot-lib/: CHANGELOG.md  README.md  geniusyield-orderbot-lib.cabal
geniusyield-orderbot-lib/src/GeniusYield/OrderBot/Adapter/: Maestro.hs
geniusyield-orderbot-lib/src/GeniusYield/OrderBot/Domain/: Markets.hs
geniusyield-orderbot/src/GeniusYield/OrderBot/: Types.hs
geniusyield-orderbot/src/GeniusYield/OrderBot/Adapter/: Maestro.hs
geniusyield-orderbot/src/GeniusYield/OrderBot/Adapter/Maestro/: Markets.hs
geniusyield-orderbot/src/GeniusYield/OrderBot/Domain/: Assets.hs  Markets.hs  OrderBook.hs
geniusyield-server-lib/: CHANGELOG.md  README.md  geniusyield-server-lib.cabal
geniusyield-server-lib/app/: Main.hs
geniusyield-server-lib/src/GeniusYield/Server/: Api.hs  Assets.hs  Auth.hs  Config.hs  Constants.hs  Ctx.hs  ErrorMiddleware.hs  Files.hs  Options.hs  Orphans.hs  RequestLoggerMiddleware.hs  Run.hs  Tx.hs  Utils.hs
geniusyield-server-lib/src/GeniusYield/Server/Dex/: Markets.hs  PartialOrder.hs
geniusyield-server-lib/src/GeniusYield/Server/Dex/HistoricalPrices/: Maestro.hs  TapTools.hs
geniusyield-server-lib/src/GeniusYield/Server/Dex/HistoricalPrices/TapTools/: Client.hs
src/GeniusYield/Api/Dex/: PartialOrder.hs  PartialOrderConfig.hs  Types.hs
src/GeniusYield/Scripts/Dex/: PartialOrder.hs  PartialOrderConfig.hs  PartialOrderNft.hs
web/openapi/: api.yaml
web/swagger/: api.json  api.yaml
