cabal-version:   3.6
name:            geniusyield-dex-api

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:         0.5.1.0
synopsis:        API code to interact with GeniusYield DEX.
description:
  API code to interact with GeniusYield DEX. Learn more about GeniusYield by visiting https://www.geniusyield.co/.

license:         Apache-2.0
license-file:    LICENSE
author:          GeniusYield
maintainer:      support@geniusyield.co
copyright:       2023 GYELD GMBH
build-type:      Simple
category:        Blockchain, Cardano, Validator
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==9.6.5

source-repository head
  type:     git
  location: https://github.com/geniusyield/dex-contracts-api

common common
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns

  ghc-options:        -Wall -Wincomplete-uni-patterns -Wunused-packages

  -- Speed-ups GHCi considerably.
  ghc-options:        -fno-show-valid-hole-fits

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    GeniusYield.Api.Dex.Constants
    GeniusYield.Api.Dex.PartialOrder
    GeniusYield.Api.Dex.PartialOrderConfig
    GeniusYield.Api.Dex.Types
    GeniusYield.Scripts
    GeniusYield.Scripts.Common
    GeniusYield.Scripts.Dex
    GeniusYield.Scripts.Dex.Data
    GeniusYield.Scripts.Dex.Nft
    GeniusYield.Scripts.Dex.PartialOrder
    GeniusYield.Scripts.Dex.PartialOrderConfig
    GeniusYield.Scripts.Dex.PartialOrderConfig.Internal
    GeniusYield.Scripts.Dex.PartialOrderNft
    GeniusYield.Scripts.Dex.Version

  build-depends:
    , aeson
    , base          ^>=4.18.2.0
    , containers
    , data-default
    , http-types
    , lens
    , mtl
    , some
    , strict
    , swagger2
    , text

  -- Dependencies whose version is fixed by @cabal.project@ file.
  build-depends:
    , atlas-cardano
    , geniusyield-common
    , ply-core

  -- Cardano libraries which are not on hackage. Their version is pinned in @cabal.project@ file or derived from other related dependencies.
  build-depends:
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
